# research-reader

./: .gitignore  AGENTS.md  PLAN.md  README.md  index.html  install.sh  package-lock.json  package.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  lib.rs  models.rs  rr_file.rs
src/components/: ErrorBoundary.tsx  WelcomeScreen.tsx
src/components/ai/: AiPanel.tsx  MarkdownMessage.tsx
src/components/annotations/: AnnotationSidebar.tsx  HighlightLayer.tsx  SelectionPopover.tsx  StickyNoteOverlay.tsx
src/components/pdf/: PdfViewer.tsx  Toolbar.tsx
src/hooks/: useTextSelection.ts
src/lib/: ai-prompts.ts  app-updates.ts  pdf-import.ts  tauri-commands.ts
src/prompts/: conversation-mode-system.md  live-session-system.md  tool-descriptions.md  tool-mode-system.md
src/stores/: ai-store.ts  annotation-store.ts  pdf-store.ts
src/types/: gesture.d.ts  index.ts  speech.d.ts
website/: index.html  main.js  styles.css  vite.config.ts
